// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lesson Card Complete State Should render lessonCard with loading... 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <div
        style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
      >
        <div
          style="box-sizing: border-box; display: block; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTE2IiBoZWlnaHQ9IjE2NSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
            style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
          />
        </div>
        <img
          class="align-self-center"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
      </div>
      <div
        class="lesson-card__description pl-4"
      >
        <span
          class="badge badge-pill badge-success float-right mt-2 mr-2 p-2 d-flex align-items-center"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="height: 15px;"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
            />
            <polyline
              points="22 4 12 14.01 9 11.01"
            />
          </svg>
          <span
            class="mx-1"
          >
            COMPLETED
          </span>
        </span>
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
        <a
          class="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
        >
          Review 
          <div
            class="spinner-border spinner-border-sm mx-1"
            role="status"
          />
           Submissions
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Complete State Should render lessonCard with null if no data 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <div
        style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
      >
        <div
          style="box-sizing: border-box; display: block; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTE2IiBoZWlnaHQ9IjE2NSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
            style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
          />
        </div>
        <img
          class="align-self-center"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
      </div>
      <div
        class="lesson-card__description pl-4"
      >
        <span
          class="badge badge-pill badge-success float-right mt-2 mr-2 p-2 d-flex align-items-center"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="height: 15px;"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
            />
            <polyline
              points="22 4 12 14.01 9 11.01"
            />
          </svg>
          <span
            class="mx-1"
          >
            COMPLETED
          </span>
        </span>
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
        <a
          class="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
        >
          Review 
          <span>
            0
          </span>
           Submissions
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Complete State Should render lessonCard with submission count 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <div
        style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
      >
        <div
          style="box-sizing: border-box; display: block; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTE2IiBoZWlnaHQ9IjE2NSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
            style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
          />
        </div>
        <img
          class="align-self-center"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
      </div>
      <div
        class="lesson-card__description pl-4"
      >
        <span
          class="badge badge-pill badge-success float-right mt-2 mr-2 p-2 d-flex align-items-center"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="height: 15px;"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
            />
            <polyline
              points="22 4 12 14.01 9 11.01"
            />
          </svg>
          <span
            class="mx-1"
          >
            COMPLETED
          </span>
        </span>
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
        <a
          class="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
        >
          Review 
          <span>
            2
          </span>
           Submissions
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render ellpsis when no data is present 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <div
        style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
      >
        <div
          style="box-sizing: border-box; display: block; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTE2IiBoZWlnaHQ9IjE2NSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
            style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
          />
        </div>
        <img
          class="align-self-center"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
      </div>
      <div
        class="lesson-card__description pl-4"
      >
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render lessonCard with inProgress currentState prop 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 lesson-card__container_inprogress border-primary"
  >
    <div
      class="d-flex p-2"
    >
      <div
        style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
      >
        <div
          style="box-sizing: border-box; display: block; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTE2IiBoZWlnaHQ9IjE2NSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
            style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
          />
        </div>
        <img
          class="align-self-center"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
      </div>
      <div
        class="lesson-card__description pl-4"
      >
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
      </div>
    </div>
    <div
      class="p-2 bg-primary"
    />
  </div>
</div>
`;

exports[`Lesson Card Should render lessonCard with lessonId prop 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <div
        style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
      >
        <div
          style="box-sizing: border-box; display: block; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTE2IiBoZWlnaHQ9IjE2NSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
            style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
          />
        </div>
        <img
          class="align-self-center"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
      </div>
      <div
        class="lesson-card__description pl-4"
      >
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/4"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render lessonCard with no submission count 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <div
        style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
      >
        <div
          style="box-sizing: border-box; display: block; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTE2IiBoZWlnaHQ9IjE2NSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
            style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
          />
        </div>
        <img
          class="align-self-center"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
      </div>
      <div
        class="lesson-card__description pl-4"
      >
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render loading card when loading 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <div
        style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
      >
        <div
          style="box-sizing: border-box; display: block; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTE2IiBoZWlnaHQ9IjE2NSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
            style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
          />
        </div>
        <img
          class="align-self-center"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
      </div>
      <div
        class="lesson-card__description pl-4"
      >
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
